CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("love-dummy")

SET(LIB_NAME "dummy")

set ( SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )

add_library(
	"${LIB_NAME}"
	STATIC
	${SOURCE_ROOT}/DummyModule.cpp
	${SOURCE_ROOT}/DummyModule.h
	${SOURCE_ROOT}/wrap_Dummy.cpp
	${SOURCE_ROOT}/wrap_Dummy.h
)

TARGET_INCLUDE_DIRECTORIES(
	"${LIB_NAME}" PUBLIC
	${PLUGIN_MODULE_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(
	"${LIB_NAME}"
	${LOVE_LUA_LIBRARY}
)

SET_TARGET_PROPERTIES("${LIB_NAME}" PROPERTIES PREFIX "")
